Switch :root to .btn to fix color contrast regression

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -1,4 +1,4 @@
- :root {
+ .btn {
     --cardinal-red: #8c1515;
     /* cardinal-red from https://identity.stanford.edu/design-elements/color/primary-colors/ */
     --bs-btn-color: #fff;
@@ -10,6 +10,7 @@
   }
 
   .btn-sul-dlss:hover {
+    background-color: var(--cardinal-red);
     filter: brightness(85%);
     color: var(--bs-btn-color);
   }
